site/styles/_shift72.scss
.s72-btn {
  @extend .btn;

  &:disabled,
  &.disabled {
    pointer-events: none;
  }

  .s72-icon {
    margin-left: 0.3em;
  }
}

 // exists once in <s72-searchresults/>
.s72-btn-search {
  @extend .btn-primary-override;
  font-size: 24px;
  height: var(--input-height);
}

.s72-btn-purchase {
  @extend .btn-primary-override;
}

.s72-btn-rent {
  @extend .btn-primary-override;
}

.s72-btn-close {
  @extend .close;
}

.s72-btn-purchase-card {
  @extend .btn-primary-override;
}

.s72-btn-purchase-free {
  @extend .btn-primary-override;
}

.s72-btn-changepassword {
  @extend .btn-primary-override;
}

.s72-btn-updateaccount {
  @extend .btn-primary-override;
}

.s72-btn-signup {
  @extend .btn-primary-override;
}

.s72-btn-signin {
  @extend .btn-primary-override;
}

.s72-btn-signin-vip {
  @extend .btn-primary-override;
}

.s72-btn-forgotpassword {
  @extend .btn-primary-override;
}

.s72-btn-resetpassword {
  @extend .btn-primary-override;
}

.s72-btn-activatedevice {
  @extend .btn-primary-override;
}

.s72-btn-modal-action {
  @extend .btn-primary-override;
}

.s72-btn-modal-cancel {
  @extend .btn-outline-secondary;
}

.s72-btn-combined-auth {
  @extend .btn-primary-override;
}

.s72-btn-combined-auth-change {
  @extend .btn-primary-override;
}

.s72-btn-applydiscount {
  @extend .btn-primary-override;
}

.s72-btn-next-page {
  @extend .btn-primary-override;
  @extend .btn-lg;
  width: 100%;
}

.s72-combined-auth {
  form {
    margin-bottom: 0;
  }
}

.s72-combined-auth-email {
  @extend .alert;
  @extend .alert-secondary;
  padding: 0.5rem 1rem;

  span {
    vertical-align: middle;
  }
}

.s72-icon {
  @extend .fa;
}

.s72-icon-angle-left {
  @extend .fa-angle-left;
}

.s72-icon-angle-right {
  @extend .fa-angle-right;
}

.s72-icon-wishlist-add {
  @extend .fa-circle-o;
  font-size: 1.4em !important;
  transition: all 0.15s ease-in-out;
}

.s72-icon-wishlist-remove {
  @extend .fa-check-circle;
  font-size: 1.4em !important;
}

.s72-icon-loading {
  @extend .icon-loading;
}

.s72-icon-errored {
  @extend .icon-errored;
}

.s72-icon.s72-block-icon {
  display: block;
  font-size: 4rem;
  margin: 0 auto;
  text-align: center;
}

.s72-icon-warning {
  @extend .icon-warning;
}

.s72-icon-search {
  @extend .icon-search;

  // undo margin left from .s72-btn .s72-icon (above)
  .s72-btn & {
    margin-left: 0;
  }
}

.s72-icon-tick {
  @extend .fa-check;
}

.s72-dropdown {
  @extend .dropdown;
}

.s72-dropdown-toggle {
  @extend .dropdown-toggle;
}

.s72-dropdown-menu {
  @extend .dropdown-menu;
}

.s72-dropdown-menu-right {
  @extend .dropdown-menu-right;
}

.s72-dropdown-item {
  @extend .dropdown-item-override;
}

// s72-sign-out             { @extend li; }

.s72-modal-error .s72-modal-content {
  @extend .text-danger;
  @extend .bg-light;
}

.s72-modal-content {
  color: $gray-900;
}

.s72-form-control {
  @extend .form-control;
}

.s72-form-group {
  @extend .form-group;
}

.s72-form-check {
  @extend .form-check;
}

.s72-form-check-label {
  @extend .form-check-label;

  span a {
    @include a;
  }
}

.s72-form-check-input {
  @extend .form-check-input;
}

.s72-form-control-readonly,
.s72-form-control-static {
  @extend .form-control-plaintext;

  .form-page & {
    color: rgba(var(--body-color-rgb), 0.5);
  }
}

// some fields which are "readonly" shouldn't have the padding and font-size applied to them because they are text (not masked "****" values)
.s72-readonly-text .s72-form-control-readonly {
  @extend .py-0;
  border: 1px solid transparent;
  border-radius: $border-radius;

  font-size: unset;
}

s72-useraccount-form {
  .s72-form-control-readonly {
    @extend .s72-form-control-static;
    border-radius: $border-radius;
  }

  .s72-account-password-form-group,
  .s72-account-pin-form-group {
    margin-top: 30px;

    label {
      font-weight: $font-weight-bold;
    }
  }
}

.s72-form-state-label {
  @include button-size(
    $btn-padding-y,
    $btn-padding-x,
    $font-size-base,
    $btn-line-height,
    $btn-border-radius
  );

  display: inline-block;
  vertical-align: middle;

  .s72-icon-tick {
    margin-right: 0.3em;
  }
}

.s72-form-errors {
  @extend .invalid-feedback;
}

.s72-has-error .form-control {
  @extend .is-invalid;
}

.s72-input-group {
  @extend .input-group;
}

.s72-input-group-append {
  @extend .input-group-append;
}

.s72-input-group-prepend {
  @extend .input-group-prepend;
}

.s72-hide {
  @extend .d-none;
}

s72-can-be-watched,
s72-can-be-watched-now,
s72-cant-be-watched {
  /* stylelint-disable-next-line */
  &.s72-show {
    display: inline-block;
  }
}

.s72-player .s72-btn-close {
  color: #fff;
  padding: 1rem;
  text-shadow: 0 1px 0 #000;
}

.s72-prompt {
  @extend p;
  @extend .text-center;

  a {
    @include a;
  }
}

.s72-divider-bottom {
  @extend .position-relative;
  &::after {
    @extend .position-absolute;
    background-color: var(--primary);
    bottom: 0 !important;
    content: '';
    height: 3px;
    left: 50% !important;
    transform: translateX(-50%) !important;
    width: 40px;
  }
}

.s72-view-all-passes {
  @extend .py-4;
  background-color: var(--body-bg-accent);
}

